proj/fir_parser.output
Terminals unused in grammar

   tBEGIN
   tEND
   tIFX
   tELIF


State 55 conflicts: 1 shift/reduce


Grammar

    0 $accept: list $end

    1 list: stmt
    2     | list stmt

    3 stmt: expr ';'
    4     | tREAD lval ';'
    5     | tWHILE expr tDO stmt
    6     | tWHILE expr tDO stmt tFINALLY stmt
    7     | tIF expr tTHEN stmt
    8     | tIF expr tTHEN stmt tELSE stmt
    9     | tPRINT expr ';'
   10     | '{' list '}'

   11 expr: tINTEGER
   12     | tSTRING
   13     | '-' expr
   14     | expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | expr '%' expr
   19     | expr '<' expr
   20     | expr '>' expr
   21     | expr tGE expr
   22     | expr tLE expr
   23     | expr tNE expr
   24     | expr tEQ expr
   25     | '(' expr ')'
   26     | lval
   27     | lval '=' expr

   28 lval: tIDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'%' (37) 18
'(' (40) 25
')' (41) 25
'*' (42) 16
'+' (43) 14
'-' (45) 13 15
'/' (47) 17
';' (59) 3 4 9
'<' (60) 19
'=' (61) 27
'>' (62) 20
'{' (123) 10
'}' (125) 10
error (256)
tINTEGER (258) 11
tIDENTIFIER (259) 28
tSTRING (260) 12
tWHILE (261) 5 6
tIF (262) 7 8
tPRINT (263) 9
tREAD (264) 4
tBEGIN (265)
tEND (266)
tDO (267) 5 6
tFINALLY (268) 6
tIFX (269)
tTHEN (270) 7 8
tELSE (271) 8
tELIF (272)
tGE (273) 21
tLE (274) 22
tEQ (275) 24
tNE (276) 23
tUNARY (277)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
list (37)
    on left: 1 2, on right: 0 2 10
stmt (38)
    on left: 3 4 5 6 7 8 9 10, on right: 1 2 5 6 7 8
expr (39)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27, on right:
    3 5 6 7 8 9 13 14 15 16 17 18 19 20 21 22 23 24 25 27
lval (40)
    on left: 28, on right: 4 26 27


State 0

    0 $accept: . list $end

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '('          shift, and go to state 10

    list  go to state 11
    stmt  go to state 12
    expr  go to state 13
    lval  go to state 14


State 1

   11 expr: tINTEGER .

    $default  reduce using rule 11 (expr)


State 2

   28 lval: tIDENTIFIER .

    $default  reduce using rule 28 (lval)


State 3

   12 expr: tSTRING .

    $default  reduce using rule 12 (expr)


State 4

    5 stmt: tWHILE . expr tDO stmt
    6     | tWHILE . expr tDO stmt tFINALLY stmt

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 15
    lval  go to state 14


State 5

    7 stmt: tIF . expr tTHEN stmt
    8     | tIF . expr tTHEN stmt tELSE stmt

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 16
    lval  go to state 14


State 6

    9 stmt: tPRINT . expr ';'

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 17
    lval  go to state 14


State 7

    4 stmt: tREAD . lval ';'

    tIDENTIFIER  shift, and go to state 2

    lval  go to state 18


State 8

   13 expr: '-' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 19
    lval  go to state 14


State 9

   10 stmt: '{' . list '}'

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '('          shift, and go to state 10

    list  go to state 20
    stmt  go to state 12
    expr  go to state 13
    lval  go to state 14


State 10

   25 expr: '(' . expr ')'

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 21
    lval  go to state 14


State 11

    0 $accept: list . $end
    2 list: list . stmt

    $end         shift, and go to state 22
    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '('          shift, and go to state 10

    stmt  go to state 23
    expr  go to state 13
    lval  go to state 14


State 12

    1 list: stmt .

    $default  reduce using rule 1 (list)


State 13

    3 stmt: expr . ';'
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    tGE  shift, and go to state 24
    tLE  shift, and go to state 25
    tEQ  shift, and go to state 26
    tNE  shift, and go to state 27
    '>'  shift, and go to state 28
    '<'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34
    ';'  shift, and go to state 35


State 14

   26 expr: lval .
   27     | lval . '=' expr

    '='  shift, and go to state 36

    $default  reduce using rule 26 (expr)


State 15

    5 stmt: tWHILE expr . tDO stmt
    6     | tWHILE expr . tDO stmt tFINALLY stmt
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    tDO  shift, and go to state 37
    tGE  shift, and go to state 24
    tLE  shift, and go to state 25
    tEQ  shift, and go to state 26
    tNE  shift, and go to state 27
    '>'  shift, and go to state 28
    '<'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34


State 16

    7 stmt: tIF expr . tTHEN stmt
    8     | tIF expr . tTHEN stmt tELSE stmt
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    tTHEN  shift, and go to state 38
    tGE    shift, and go to state 24
    tLE    shift, and go to state 25
    tEQ    shift, and go to state 26
    tNE    shift, and go to state 27
    '>'    shift, and go to state 28
    '<'    shift, and go to state 29
    '+'    shift, and go to state 30
    '-'    shift, and go to state 31
    '*'    shift, and go to state 32
    '/'    shift, and go to state 33
    '%'    shift, and go to state 34


State 17

    9 stmt: tPRINT expr . ';'
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    tGE  shift, and go to state 24
    tLE  shift, and go to state 25
    tEQ  shift, and go to state 26
    tNE  shift, and go to state 27
    '>'  shift, and go to state 28
    '<'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34
    ';'  shift, and go to state 39


State 18

    4 stmt: tREAD lval . ';'

    ';'  shift, and go to state 40


State 19

   13 expr: '-' expr .
   14     | expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    $default  reduce using rule 13 (expr)


State 20

    2 list: list . stmt
   10 stmt: '{' list . '}'

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '}'          shift, and go to state 41
    '('          shift, and go to state 10

    stmt  go to state 23
    expr  go to state 13
    lval  go to state 14


State 21

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr
   25     | '(' expr . ')'

    tGE  shift, and go to state 24
    tLE  shift, and go to state 25
    tEQ  shift, and go to state 26
    tNE  shift, and go to state 27
    '>'  shift, and go to state 28
    '<'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34
    ')'  shift, and go to state 42


State 22

    0 $accept: list $end .

    $default  accept


State 23

    2 list: list stmt .

    $default  reduce using rule 2 (list)


State 24

   21 expr: expr tGE . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 43
    lval  go to state 14


State 25

   22 expr: expr tLE . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 44
    lval  go to state 14


State 26

   24 expr: expr tEQ . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 45
    lval  go to state 14


State 27

   23 expr: expr tNE . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 46
    lval  go to state 14


State 28

   20 expr: expr '>' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 47
    lval  go to state 14


State 29

   19 expr: expr '<' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 48
    lval  go to state 14


State 30

   14 expr: expr '+' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 49
    lval  go to state 14


State 31

   15 expr: expr '-' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 50
    lval  go to state 14


State 32

   16 expr: expr '*' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 51
    lval  go to state 14


State 33

   17 expr: expr '/' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 52
    lval  go to state 14


State 34

   18 expr: expr '%' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 53
    lval  go to state 14


State 35

    3 stmt: expr ';' .

    $default  reduce using rule 3 (stmt)


State 36

   27 expr: lval '=' . expr

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    '-'          shift, and go to state 8
    '('          shift, and go to state 10

    expr  go to state 54
    lval  go to state 14


State 37

    5 stmt: tWHILE expr tDO . stmt
    6     | tWHILE expr tDO . stmt tFINALLY stmt

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '('          shift, and go to state 10

    stmt  go to state 55
    expr  go to state 13
    lval  go to state 14


State 38

    7 stmt: tIF expr tTHEN . stmt
    8     | tIF expr tTHEN . stmt tELSE stmt

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '('          shift, and go to state 10

    stmt  go to state 56
    expr  go to state 13
    lval  go to state 14


State 39

    9 stmt: tPRINT expr ';' .

    $default  reduce using rule 9 (stmt)


State 40

    4 stmt: tREAD lval ';' .

    $default  reduce using rule 4 (stmt)


State 41

   10 stmt: '{' list '}' .

    $default  reduce using rule 10 (stmt)


State 42

   25 expr: '(' expr ')' .

    $default  reduce using rule 25 (expr)


State 43

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   21     | expr tGE expr .
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 21 (expr)


State 44

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   22     | expr tLE expr .
   23     | expr . tNE expr
   24     | expr . tEQ expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 22 (expr)


State 45

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr
   24     | expr tEQ expr .

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 24 (expr)


State 46

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   23     | expr tNE expr .
   24     | expr . tEQ expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 23 (expr)


State 47

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   20     | expr '>' expr .
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 20 (expr)


State 48

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   19     | expr '<' expr .
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 19 (expr)


State 49

   14 expr: expr . '+' expr
   14     | expr '+' expr .
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 14 (expr)


State 50

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   15     | expr '-' expr .
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 15 (expr)


State 51

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   16     | expr '*' expr .
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    $default  reduce using rule 16 (expr)


State 52

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   17     | expr '/' expr .
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    $default  reduce using rule 17 (expr)


State 53

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   18     | expr '%' expr .
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr

    $default  reduce using rule 18 (expr)


State 54

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '%' expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . tGE expr
   22     | expr . tLE expr
   23     | expr . tNE expr
   24     | expr . tEQ expr
   27     | lval '=' expr .

    tGE  shift, and go to state 24
    tLE  shift, and go to state 25
    tEQ  shift, and go to state 26
    tNE  shift, and go to state 27
    '>'  shift, and go to state 28
    '<'  shift, and go to state 29
    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 27 (expr)


State 55

    5 stmt: tWHILE expr tDO stmt .
    6     | tWHILE expr tDO stmt . tFINALLY stmt

    tFINALLY  shift, and go to state 57

    tFINALLY  [reduce using rule 5 (stmt)]
    $default  reduce using rule 5 (stmt)


State 56

    7 stmt: tIF expr tTHEN stmt .
    8     | tIF expr tTHEN stmt . tELSE stmt

    tELSE  shift, and go to state 58

    $default  reduce using rule 7 (stmt)


State 57

    6 stmt: tWHILE expr tDO stmt tFINALLY . stmt

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '('          shift, and go to state 10

    stmt  go to state 59
    expr  go to state 13
    lval  go to state 14


State 58

    8 stmt: tIF expr tTHEN stmt tELSE . stmt

    tINTEGER     shift, and go to state 1
    tIDENTIFIER  shift, and go to state 2
    tSTRING      shift, and go to state 3
    tWHILE       shift, and go to state 4
    tIF          shift, and go to state 5
    tPRINT       shift, and go to state 6
    tREAD        shift, and go to state 7
    '-'          shift, and go to state 8
    '{'          shift, and go to state 9
    '('          shift, and go to state 10

    stmt  go to state 60
    expr  go to state 13
    lval  go to state 14


State 59

    6 stmt: tWHILE expr tDO stmt tFINALLY stmt .

    $default  reduce using rule 6 (stmt)


State 60

    8 stmt: tIF expr tTHEN stmt tELSE stmt .

    $default  reduce using rule 8 (stmt)
